# pr-mcp

./: .gitignore  README.md  pyproject.toml
.github/: ci.yml
.github/workflows/: ci.yml
src/: server.py
src/templates/: bug.md
tests/: test_server.py
